# Constraint-Aware-Toolkit-for-WebGUI-Design

./: LICENSE  QUICK_START.md  README.md  SETUP.md  background.js  content.css  content.js  manifest.json  reference.html  server.py  sidepanel.html  sidepanel.js
hcs_package/: MANIFEST.in  README.md  pyproject.toml
hcs_package/src/hcs_package/: __init__.py  constraint_utils.py  constraints.py  cursor_simulator.py  model.py  noise.py  params.py  reference_path.py
hcs_package/src/hcs_package/point_and_click_modules/: __init__.py  mouse_module.py  upper_limb_module.py
hcs_package/tests/: README.md  __init__.py  test_cascading_menu.py  test_task.json
hcs_package/tests/output/: .gitignore
